Fix: Header not stretching in mobile view.

--- a/src/components/pokeCard/pokeHeader.module.css
+++ b/src/components/pokeCard/pokeHeader.module.css
@@ -23,7 +23,6 @@
     min-width: 20%;
   }
   .pokeImageContainer {
-    width: 40%;
     height: 100%;
     border-bottom-left-radius: 10px;
   }
